--- a/css/style.scss
+++ b/css/style.scss
@@ -432,6 +432,9 @@ body {
         &:hover &__photo{
             filter: brightness(30%);
         }
+        &:hover &__photo_cat{
+            filter: brightness(30%);
+        }
         &:hover .add-box {
             display: flex;
             z-index: 100;
@@ -443,7 +446,12 @@ body {
 
         &__photo {
             width: calc(($siteWidth - $gaps * 3) / 4);
-            height: 280px;
+            &_cat{
+                width: calc(($siteWidth - $gaps * 2) / 3)
+            }
+            // width: 100%;
+            // min-height: 280px;
+            // box-sizing: border-box;
         }
 
         &__title {
@@ -507,7 +515,7 @@ body {
     } 
 }
   
-.cart {
+.cart-image {
     margin-right: 10px;
 }
 
@@ -1324,4 +1332,75 @@ body {
         }
     }
 
+}
+
+.catalogue{
+    @extend %flex-row-center;
+    width: 100%;
+    margin: $gaps 0;
+    align-items: start;
+    justify-content: space-between;
+    
+    &-menu{
+        width: 20%;
+        margin-right: $gaps;
+
+        &__title{
+            list-style: none;
+            font-size: 14px;
+            line-height: 20px;
+            font-weight: 700;
+            text-transform: uppercase;
+            color: #6f6e6e;
+            padding: 16px;
+            border-left: 5px solid $textColorAlternative;
+            border-bottom: 1px solid #ebebeb;
+            cursor: pointer;
+        }
+        &__section{
+            @extend %flex-column-center;
+            align-items: end;
+            margin-bottom: 16px;
+
+            &[open] .catalogue-menu__title{
+                color: $textColorAlternative
+            }
+        }
+
+        &__item{
+            padding: 8px 21px;
+        }
+    }
+
+    &-box{
+        width: calc(76% + $gaps*2);
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        gap: $gaps;
+        box-sizing: border-box;
+    }
+    &-filters{
+        &__title{
+            font-size: 14px;
+            line-height: 20px;
+            font-weight: 700;
+            text-transform: uppercase;
+            color: #6f6e6e;
+            padding: 16px 0;
+        }
+        &__trend-options{
+            font-size: 14px;
+            line-height: 26px;
+            font-weight: 400;
+            color: #6f6e6e;
+        }
+    }
+    
+    &-sorting{
+        grid-column: span 3;
+        width: 100%;
+        height: 50px;
+        background-color: #f3f3f3;
+        margin: $gaps*2 0;
+    }
 }
