--- a/css/style.scss
+++ b/css/style.scss
@@ -1378,6 +1378,7 @@ body {
         grid-template-columns: repeat(3, 1fr);
         gap: $gaps;
         box-sizing: border-box;
+        margin-bottom: $gaps * 2;
     }
     &-filters{
         &__title{
@@ -1388,11 +1389,58 @@ body {
             color: #6f6e6e;
             padding: 16px 0;
         }
-        &__trend-options{
+        &__trends{
+            &-box{
+                @extend %flex-row-center;
+                flex-wrap: wrap;                  
+            }
+            
+            &-options{
+                display: inline-flex;
+                font-size: 14px;
+                line-height: 26px;
+                font-weight: 400;
+                color: #6f6e6e;
+                padding-right: $gaps/2;
+
+                &:not(:last-of-type)::after{
+                    content: '|';
+                    padding-left: $gaps/2;
+                }
+                    
+            }
+        }
+        &__sizes{
+            @extend %flex-row-center;
+            flex-wrap: wrap;
+            &-box{
+                width: 25%;
+            }
+        }
+
+        &__size{
             font-size: 14px;
-            line-height: 26px;
+            line-height: 20px;
             font-weight: 400;
+            text-transform: uppercase;
             color: #6f6e6e;
+            margin-left: 8px;
+        }
+        &__price{
+            &-slider{
+                width: 100%;
+                accent-color: $textColorAlternative;
+            }
+            &-range{
+                @extend %flex-row-center;
+                justify-content: space-between;
+            }
+            &-value{
+                font-size: 14px;
+                line-height: 26px;
+                font-weight: 400;
+                color: #6f6e6e;
+            }
         }
     }
     
@@ -1402,5 +1450,78 @@ body {
         height: 50px;
         background-color: #f3f3f3;
         margin: $gaps*2 0;
+        padding-left: $gaps/2;
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        gap: $gaps;
+        
+        &__form{
+            display: flex;
+            flex-direction: row;
+            align-items: center;
+            justify-content: space-between;
+            width: 153px;
+            height: 30px;
+            background-color: #ffffff;
+            border: 1px solid #ebebeb;
+            box-sizing: border-box;
+        }
+        &__text{
+            font-size: 14px;
+            line-height: 28px;
+            font-weight: 400;
+            color: #6f6e6e;
+            padding-left: 8px;
+            
+            &-selector{
+
+                height: 100%;
+                // outline-style: none;
+                background-color: #ffffff;
+                border: 1px solid #eaeaea;
+                padding: 0 $gaps;
+                box-sizing: border-box;
+                &:focus{
+                    outline: none;
+                }
+            }
+        }
+    }
+    &-pagination{
+        grid-column: span 2;
+        width: 261px;
+        height: 44px;
+        background-color: #ffffff;
+        border: 1px solid #ebebeb;
+        border-radius: 3px;
+        @extend %flex-row-center;
+        justify-content: space-around;
+
+        &__item{
+            font-size: 16px;
+            line-height: 26px;
+            font-weight: 700;
+            color: #c4c4c4;
+            padding: auto 0;
+            cursor: pointer;
+            &:hover{
+                color: $textColorAlternative;
+            }
+        }
+
+    }
+    &-forwarder{
+        width: 150px;
+        height: 44px;
+        background-color: $textColorAlternative;
+        color: $textColorReserve;
+        border: 1px solid $textColorAlternative;
+        border-radius: 3px;
+        &:hover{
+            background-color: $textColorReserve;
+            color: $textColorAlternative;
+        }
+        justify-self: right;
     }
 }
