minor changes in filters on Catalogue page made

--- a/css/style.css
+++ b/css/style.css
@@ -1243,7 +1243,7 @@ a:hover {
   flex-direction: row;
   align-items: center;
   justify-content: space-between;
-  width: 153px;
+  width: 170px;
   height: 30px;
   background-color: #ffffff;
   border: 1px solid #ebebeb;
@@ -1259,7 +1259,8 @@ a:hover {
 .catalogue-sorting__text-selector {
   height: 100%;
   background-color: #ffffff;
-  border: 1px solid #eaeaea;
+  border: none;
+  border-left: 1px solid #eaeaea;
   padding: 0 20px;
   box-sizing: border-box;
 }
