--- a/css/style.scss
+++ b/css/style.scss
@@ -1461,7 +1461,7 @@ body {
             flex-direction: row;
             align-items: center;
             justify-content: space-between;
-            width: 153px;
+            width: 170px;
             height: 30px;
             background-color: #ffffff;
             border: 1px solid #ebebeb;
@@ -1479,7 +1479,8 @@ body {
                 height: 100%;
                 // outline-style: none;
                 background-color: #ffffff;
-                border: 1px solid #eaeaea;
+                border: none;
+                border-left: 1px solid #eaeaea;
                 padding: 0 $gaps;
                 box-sizing: border-box;
                 &:focus{
